# rBuilder

./: .gitattributes  .gitignore  AGENTS.md  AGENT_INTEGRATION.md  AI_AGENT_REVIEW_GUIDE.md  API_PARITY_COMPLETE.md  AUDIT_LOG.txt  CLI_REFACTOR_V2.md  CODE_REVIEW_GUIDE.md  CODE_REVIEW_REPORT.md  COMMIT_REVIEW_a1dfb22.md  COMPARISON.md  CONTRIBUTING.md  CURSOR_ACTION_PLAN.md  Cargo.toml  DEFERRED_TASKS.md  FEATURE_ROADMAP_DISCUSSION.md  LANGUAGE_GUIDE.md  LANGUAGE_RESEARCH.md  LICENSE  NLP_QUERY_EXAMPLES.md  NLP_WITHOUT_LLM.md  PHASE1_PROGRESS.md  PHASE5_REVIEW.md  PHASE6_REVIEW.md  PHASE7_PLAN.md  PHASE_11_REVIEW.md  PHASE_12_IMPLEMENTATION_GUIDE.md  PHASE_12_REVIEW.md  PHASE_13_ADVANCED_ANALYSIS_GUIDE.md  PHASE_13_FINAL_REVIEW.md  PHASE_13_IMPLEMENTATION_REVIEW.md  PHASE_14_DASHBOARD_ENHANCEMENT.md  PHASE_14_IMPLEMENTATION_GUIDE.md  PHASE_14_REVIEW.md  PHASE_16_ANSIBLE_IMPLEMENTATION.md  PHASE_17_CHEF_IMPLEMENTATION.md  PHASE_18_PUPPET_CODE_REVIEW.md  PHASE_18_PUPPET_IMPLEMENTATION.md  PHASE_19_CODE_REVIEW_SETUP.md  (+21 more)
.cargo/: config.toml
.claude/: settings.json
.github/: PHASE_21_WORKSPACE_MIGRATION.md  PULL_REQUEST_TEMPLATE.md  TASK_PLAN.md
benches/: analysis_benchmarks.rs  blast_radius_benchmarks.rs  centrality_benchmarks.rs  community_benchmarks.rs  graph.rs  (+6 more)
crates/rbuilder-analysis/: Cargo.toml  README.md  build.rs
crates/rbuilder-analysis/assets/: vocab_tokens.txt
crates/rbuilder-analysis/assets/code-daemon-embed-v1/: model.onnx  model.onnx.data  sentencepiece.bpe.model
crates/rbuilder-analysis/src/: alias.rs  ast_skeleton.rs  blast_engine_snapshot.rs  blast_radius.rs  blast_radius_scc.rs  blast_slice_handoff.rs  callgraph.rs  centrality.rs  centrality_approx.rs  cfg.rs  cfg_builder.rs  cfg_pdg_archive.rs  cold_metadata.rs  combined.txt  community.rs  complexity.rs  cpg.rs  cpg_export.rs  dataflow.rs  def_use.rs  dependency.rs  dominance.rs  field_write.rs  field_write_locals.rs  flow_cache.rs  graph_utils.rs  interprocedural_cfg.rs  interprocedural_slicing.rs  language_profile.rs  lib.rs  macro_call_index.rs  macro_call_lookup.rs  migration.rs  node_lookup.rs  pdg.rs  policy.rs  results.rs  semantic_code_daemon.rs  semantic_diffuse.rs  semantic_embedded.rs  (+13 more)
crates/rbuilder-bundle-extended/: Cargo.toml
crates/rbuilder-bundle-extended/src/: lib.rs
crates/rbuilder-bundle-extra/: Cargo.toml
crates/rbuilder-bundle-extra/src/: lib.rs
crates/rbuilder-bundle-minimal/: Cargo.toml
crates/rbuilder-bundle-minimal/src/: lib.rs
crates/rbuilder-cli/: Cargo.toml
crates/rbuilder-cli/src/: git_util.rs  lib.rs
crates/rbuilder-cli/src/cli/: chat.rs  diagram.rs  mcp.rs  mod.rs  serve.rs  update.rs  workspace.rs
crates/rbuilder-cli/src/hooks/: mod.rs
crates/rbuilder-cli/src/multi_repo/: linker.rs  sync.rs  workspace.rs
crates/rbuilder-cli/src/output/: formatter.rs  mod.rs
crates/rbuilder-config-formats/: Cargo.toml
crates/rbuilder-config-formats/src/: json.rs  lib.rs  markdown.rs  properties.rs  toml_plugin.rs  yaml.rs
crates/rbuilder-core/: Cargo.toml  README.md
crates/rbuilder-core/src/: lib.rs  memory.rs
crates/rbuilder-dashboard/: Cargo.toml  build.rs
crates/rbuilder-dashboard/src/: analysis_stream_export.rs  blast_export.rs  bundle.rs  cfg_export.rs  cfg_record_pack.rs  communities.rs  dataflow_export.rs  export_context.rs  export_util.rs  function_meta.rs  function_metrics_export.rs  lib.rs  manifest.rs  metagraph.rs  migration_export.rs  mutations_export.rs  profile.rs  slice_export.rs  source_catalog.rs  taint_export.rs
crates/rbuilder-dashboard/tests/: profile_linux_save.rs
crates/rbuilder-error/: Cargo.toml
crates/rbuilder-error/src/: lib.rs
crates/rbuilder-export/: Cargo.toml
crates/rbuilder-export/src/: graphml.rs  graphviz.rs  html.rs  lib.rs  mermaid.rs  render.rs
crates/rbuilder-extraction/: Cargo.toml
crates/rbuilder-extraction/src/: extractor.rs  graph_builder.rs  lib.rs  usage_detector.rs
crates/rbuilder-extraction/src/discovery/: mod.rs
crates/rbuilder-gql/: Cargo.toml
crates/rbuilder-gql/src/: ast.rs  executor.rs  lib.rs  macros.rs  optimizer.rs  parser.rs
crates/rbuilder-graph/: Cargo.toml  README.md
crates/rbuilder-graph/src/: code_graph.rs  code_index.rs  columnar_snapshot.rs  csr.rs  export.rs  intern.rs  lib.rs  migration.rs  query.rs  schema.rs  segmented_spill.rs  snapshot.rs  structural_sketch.rs
crates/rbuilder-graph/src/backend/: indradb.rs  memory.rs  mod.rs  trait_def.rs
crates/rbuilder-incremental/: Cargo.toml
crates/rbuilder-incremental/src/: file_tracker.rs  lib.rs  updater.rs  watch.rs
crates/rbuilder-incremental/src/changes/: mod.rs
crates/rbuilder-lang-ansible/: Cargo.toml
crates/rbuilder-lang-ansible/src/: analysis.rs  cli.rs  lib.rs  parser.rs  plugin.rs  security.rs
crates/rbuilder-lang-assembly/: Cargo.toml
crates/rbuilder-lang-assembly/src/: config.rs
crates/rbuilder-lang-bash/: Cargo.toml
crates/rbuilder-lang-bash/src/: lib.rs  plugin.rs
crates/rbuilder-lang-c/: Cargo.toml
crates/rbuilder-lang-c/src/: config.rs  lib.rs  plugin.rs
crates/rbuilder-lang-cpp/: Cargo.toml
crates/rbuilder-lang-cpp/src/: config.rs  lib.rs  plugin.rs
crates/rbuilder-lang-crystal/: Cargo.toml
crates/rbuilder-lang-crystal/src/: config.rs  lib.rs
crates/rbuilder-lang-csharp/: Cargo.toml
crates/rbuilder-lang-csharp/src/: config.rs  lib.rs  plugin.rs
crates/rbuilder-lang-dockerfile/: Cargo.toml
crates/rbuilder-lang-dockerfile/src/: lib.rs  plugin.rs
crates/rbuilder-lang-elixir/: Cargo.toml
crates/rbuilder-lang-elixir/src/: config.rs  lib.rs
crates/rbuilder-lang-erlang/: Cargo.toml
crates/rbuilder-lang-erlang/src/: config.rs  lib.rs
crates/rbuilder-lang-fortran/: Cargo.toml
crates/rbuilder-lang-fortran/src/: config.rs  lib.rs
crates/rbuilder-lang-fsharp/: Cargo.toml
crates/rbuilder-lang-fsharp/src/: config.rs  lib.rs
crates/rbuilder-lang-go/: Cargo.toml
crates/rbuilder-lang-go/src/: lib.rs  plugin.rs
crates/rbuilder-lang-java/: Cargo.toml
crates/rbuilder-lang-java/src/: lib.rs  plugin.rs
rbuilder-macros/: Cargo.toml
rbuilder-macros/src/: lib.rs
(+1376 files in other folders)
