[package]
name = "rbuilder"
version = "0.1.0"
edition = "2021"
authors = ["rBuilder Contributors"]
description = "AI-powered code knowledge graph system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rbuilder"
readme = "README.md"
keywords = ["code-analysis", "graph", "ai", "mcp", "knowledge-graph"]
categories = ["development-tools", "command-line-utilities"]
build = "build.rs"

[workspace]
members = [".", "rbuilder-macros"]

[dependencies]
# Parsing & AST - Programming Languages
tree-sitter = "0.25"
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-scala = { version = "0.26", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-erlang = { version = "0.19", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-dart = { version = "0.2", optional = true }
tree-sitter-r = { version = "1.2", optional = true }
tree-sitter-julia = { version = "0.23", optional = true }
tree-sitter-nim = { git = "https://github.com/alaviss/tree-sitter-nim", optional = true }
tree-sitter-ocaml = { version = "0.25", optional = true }
ts-parser-perl = { version = "1.1", optional = true }
tree-sitter-fortran = { version = "0.6", optional = true }
tree-sitter-verilog = { version = "1.0", optional = true }
tree-sitter-vhdl = { version = "1.4", optional = true }
tree-sitter-pascal = { version = "0.10", optional = true }
tree-sitter-zig = { version = "1.1", optional = true }
tree-sitter-fsharp = { version = "0.3", optional = true }
tree-sitter-crystal = { git = "https://github.com/crystal-lang-tools/tree-sitter-crystal", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }

# Proc macros (Phase 7.2)
rbuilder-macros = { path = "rbuilder-macros", optional = true }

# Configuration Format Parsers
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
quick-xml = "0.31"

# Graph Backend
indradb-lib = "4.0"
# rocksdb is pulled in by indradb-lib, no need for explicit dependency

# Graph Algorithms
petgraph = "0.6"
pathfinding = "4.0"

# Parallelization
rayon = "1.7"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"

# MCP (Model Context Protocol) Integration
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", optional = true, features = ["fs", "cors"] }

# NLP - Pattern Matching & Local Processing
regex = "1"
aho-corasick = "1"
fancy-regex = "0.11"
unicode-normalization = "0.1"
strsim = "0.11"

# NLP - Embeddings & Similarity (optional)
ndarray = { version = "0.15", optional = true }

# LLM Integration (optional fallback)
reqwest = { version = "0.11", features = ["json"], optional = true }

# CLI & Output
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
indicatif = "0.17"
console = "0.15"

# Templating (for IDL generation)
handlebars = "4"

# Hashing & Fingerprinting
blake3 = "1"
xxhash-rust = "0.8"

# Error Handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Markdown parsing
pulldown-cmark = "0.9"

# Plugin loading
libloading = { version = "0.8", optional = true }

# Serialization
bincode = "1.3"

# File discovery
ignore = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
pretty_assertions = "1"
insta = "1"

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[features]
default = ["bundle-full", "nlp-patterns", "mcp-server"]

# Backward-compatible alias
all-languages = ["bundle-extra"]

# Individual language features (from languages.toml)
lang-rust = ["tree-sitter-rust"]
lang-python = ["tree-sitter-python"]
lang-typescript = ["tree-sitter-typescript"]
lang-javascript = ["tree-sitter-javascript"]
lang-go = ["tree-sitter-go"]
lang-java = ["tree-sitter-java"]
lang-kotlin = []
lang-csharp = []
lang-markdown = []
lang-c = ["tree-sitter-c"]
lang-cpp = ["tree-sitter-cpp"]
lang-ruby = ["tree-sitter-ruby"]
lang-php = ["tree-sitter-php"]
lang-swift = ["tree-sitter-swift"]
lang-scala = ["tree-sitter-scala"]
lang-lua = ["tree-sitter-lua"]
lang-elixir = ["tree-sitter-elixir"]
lang-erlang = ["tree-sitter-erlang"]
lang-haskell = ["tree-sitter-haskell"]
lang-dart = ["tree-sitter-dart"]
lang-r = ["tree-sitter-r"]
lang-julia = ["tree-sitter-julia"]
lang-nim = ["tree-sitter-nim"]
lang-ocaml = ["tree-sitter-ocaml"]
lang-perl = ["ts-parser-perl"]
lang-fortran = ["tree-sitter-fortran"]
lang-verilog = ["tree-sitter-verilog"]
lang-vhdl = ["tree-sitter-vhdl"]
lang-cobol = []
lang-pascal = ["tree-sitter-pascal"]
lang-scheme = []
lang-zig = ["tree-sitter-zig"]
lang-fsharp = ["tree-sitter-fsharp"]
lang-crystal = ["tree-sitter-crystal"]
lang-clojure = []
lang-assembly = []
lang-sql = []
lang-dockerfile = []
lang-github_actions = []
lang-gitlab_ci = []
lang-bash = ["tree-sitter-bash"]

# Bundles (from languages.toml — Phase 11.1.3)
bundle-minimal = [
    "lang-rust",
    "lang-python",
    "lang-javascript",
    "lang-typescript",
    "lang-go",
]
bundle-extended = [
    "bundle-minimal",
    "lang-java",
    "lang-kotlin",
    "lang-csharp",
    "lang-markdown",
    "lang-c",
    "lang-cpp",
    "lang-ruby",
    "lang-php",
    "lang-sql",
    "lang-bash",
    "lang-dockerfile",
    "lang-github_actions",
    "lang-gitlab_ci",
]
bundle-full = [
    "bundle-extended",
    "lang-swift",
    "lang-scala",
    "lang-elixir",
    "lang-erlang",
    "lang-dart",
    "lang-lua",
    "lang-haskell",
    "lang-julia",
    "lang-r",
    "lang-nim",
]
bundle-extra = [
    "bundle-full",
    "lang-ocaml",
    "lang-perl",
    "lang-fortran",
    "lang-verilog",
    "lang-vhdl",
    "lang-cobol",
    "lang-pascal",
    "lang-scheme",
    "lang-zig",
    "lang-fsharp",
    "lang-crystal",
    "lang-clojure",
    "lang-assembly",
]

# NLP Query Features (progressive enhancement)
nlp-patterns = []
nlp-cache = ["nlp-patterns", "ndarray"]
nlp-llm = ["nlp-cache", "reqwest"]

# Integration Features
mcp-server = ["axum", "tower-http"]
plugin-system = ["libloading"]
proc-macros = ["rbuilder-macros"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[[bin]]
name = "rbuilder"
path = "src/main.rs"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "phase11_polyglot"
harness = false
required-features = ["bundle-extended"]

[[bench]]
name = "nlp"
harness = false
