[workspace]
members = [
    ".",
    "rbuilder-macros",
    "crates/rbuilder-plugin-api",
    "crates/rbuilder-plugin-helpers",
    "crates/rbuilder-config-formats",
    "crates/rbuilder-lang-runtime",
    "crates/rbuilder-registry",
    "crates/rbuilder-error",
    "crates/rbuilder-graph",
    "crates/rbuilder-extraction",
    "crates/rbuilder-pipeline",
    "crates/rbuilder-analysis",
    "crates/rbuilder-gql",
    "crates/rbuilder-export",
    "crates/rbuilder-nlp",
    "crates/rbuilder-security",
    "crates/rbuilder-project-config",
    "crates/rbuilder-incremental",
    "crates/rbuilder-semantic",
    "crates/rbuilder-rules",
    "crates/rbuilder-cli",
    "crates/rbuilder-core",
    "crates/rbuilder-lang-ansible",
    "crates/rbuilder-lang-assembly",
    "crates/rbuilder-lang-bash",
    "crates/rbuilder-lang-c",
    "crates/rbuilder-lang-chef",
    "crates/rbuilder-lang-clojure",
    "crates/rbuilder-lang-cobol",
    "crates/rbuilder-lang-cpp",
    "crates/rbuilder-lang-crystal",
    "crates/rbuilder-lang-csharp",
    "crates/rbuilder-lang-dart",
    "crates/rbuilder-lang-dockerfile",
    "crates/rbuilder-lang-elixir",
    "crates/rbuilder-lang-erlang",
    "crates/rbuilder-lang-fortran",
    "crates/rbuilder-lang-fsharp",
    "crates/rbuilder-lang-github-actions",
    "crates/rbuilder-lang-gitlab-ci",
    "crates/rbuilder-lang-go",
    "crates/rbuilder-lang-haskell",
    "crates/rbuilder-lang-java",
    "crates/rbuilder-lang-javascript",
    "crates/rbuilder-lang-julia",
    "crates/rbuilder-lang-kotlin",
    "crates/rbuilder-lang-lua",
    "crates/rbuilder-lang-markdown",
    "crates/rbuilder-lang-nim",
    "crates/rbuilder-lang-ocaml",
    "crates/rbuilder-lang-pascal",
    "crates/rbuilder-lang-perl",
    "crates/rbuilder-lang-php",
    "crates/rbuilder-lang-puppet",
    "crates/rbuilder-lang-python",
    "crates/rbuilder-lang-r",
    "crates/rbuilder-lang-ruby",
    "crates/rbuilder-lang-rust",
    "crates/rbuilder-lang-scala",
    "crates/rbuilder-lang-scheme",
    "crates/rbuilder-lang-sql",
    "crates/rbuilder-lang-swift",
    "crates/rbuilder-lang-typescript",
    "crates/rbuilder-lang-verilog",
    "crates/rbuilder-lang-vhdl",
    "crates/rbuilder-lang-zig",
    "crates/rbuilder-bundle-extended",
    "crates/rbuilder-bundle-extra",
    "crates/rbuilder-bundle-full",
    "crates/rbuilder-bundle-minimal",
]
resolver = "2"

[workspace.dependencies]
rbuilder-plugin-api = { path = "crates/rbuilder-plugin-api", version = "0.1.0" }
rbuilder-plugin-helpers = { path = "crates/rbuilder-plugin-helpers", version = "0.1.0" }
rbuilder-config-formats = { path = "crates/rbuilder-config-formats", version = "0.1.0" }
rbuilder-lang-runtime = { path = "crates/rbuilder-lang-runtime", version = "0.1.0" }
rbuilder-registry = { path = "crates/rbuilder-registry", version = "0.1.0" }
rbuilder-error = { path = "crates/rbuilder-error", version = "0.1.0" }
rbuilder-graph = { path = "crates/rbuilder-graph", version = "0.1.0" }
rbuilder-extraction = { path = "crates/rbuilder-extraction", version = "0.1.0" }
rbuilder-pipeline = { path = "crates/rbuilder-pipeline", version = "0.1.0" }
rbuilder-analysis = { path = "crates/rbuilder-analysis", version = "0.1.0" }
rbuilder-gql = { path = "crates/rbuilder-gql", version = "0.1.0" }
rbuilder-export = { path = "crates/rbuilder-export", version = "0.1.0" }
rbuilder-nlp = { path = "crates/rbuilder-nlp", version = "0.1.0" }
rbuilder-security = { path = "crates/rbuilder-security", version = "0.1.0" }
rbuilder-project-config = { path = "crates/rbuilder-project-config", version = "0.1.0" }
rbuilder-incremental = { path = "crates/rbuilder-incremental", version = "0.1.0" }
rbuilder-semantic = { path = "crates/rbuilder-semantic", version = "0.1.0" }
rbuilder-rules = { path = "crates/rbuilder-rules", version = "0.1.0" }
rbuilder-cli = { path = "crates/rbuilder-cli", version = "0.1.0" }
rbuilder-core = { path = "crates/rbuilder-core", version = "0.1.0" }
tempfile = "3"
rbuilder-lang-ansible = { path = "crates/rbuilder-lang-ansible", version = "0.1.0" }
rbuilder-lang-assembly = { path = "crates/rbuilder-lang-assembly", version = "0.1.0" }
rbuilder-lang-bash = { path = "crates/rbuilder-lang-bash", version = "0.1.0" }
rbuilder-lang-c = { path = "crates/rbuilder-lang-c", version = "0.1.0" }
rbuilder-lang-chef = { path = "crates/rbuilder-lang-chef", version = "0.1.0" }
rbuilder-lang-clojure = { path = "crates/rbuilder-lang-clojure", version = "0.1.0" }
rbuilder-lang-cobol = { path = "crates/rbuilder-lang-cobol", version = "0.1.0" }
rbuilder-lang-cpp = { path = "crates/rbuilder-lang-cpp", version = "0.1.0" }
rbuilder-lang-crystal = { path = "crates/rbuilder-lang-crystal", version = "0.1.0" }
rbuilder-lang-csharp = { path = "crates/rbuilder-lang-csharp", version = "0.1.0" }
rbuilder-lang-dart = { path = "crates/rbuilder-lang-dart", version = "0.1.0" }
rbuilder-lang-dockerfile = { path = "crates/rbuilder-lang-dockerfile", version = "0.1.0" }
rbuilder-lang-elixir = { path = "crates/rbuilder-lang-elixir", version = "0.1.0" }
rbuilder-lang-erlang = { path = "crates/rbuilder-lang-erlang", version = "0.1.0" }
rbuilder-lang-fortran = { path = "crates/rbuilder-lang-fortran", version = "0.1.0" }
rbuilder-lang-fsharp = { path = "crates/rbuilder-lang-fsharp", version = "0.1.0" }
rbuilder-lang-github-actions = { path = "crates/rbuilder-lang-github-actions", version = "0.1.0" }
rbuilder-lang-gitlab-ci = { path = "crates/rbuilder-lang-gitlab-ci", version = "0.1.0" }
rbuilder-lang-go = { path = "crates/rbuilder-lang-go", version = "0.1.0" }
rbuilder-lang-haskell = { path = "crates/rbuilder-lang-haskell", version = "0.1.0" }
rbuilder-lang-java = { path = "crates/rbuilder-lang-java", version = "0.1.0" }
rbuilder-lang-javascript = { path = "crates/rbuilder-lang-javascript", version = "0.1.0" }
rbuilder-lang-julia = { path = "crates/rbuilder-lang-julia", version = "0.1.0" }
rbuilder-lang-kotlin = { path = "crates/rbuilder-lang-kotlin", version = "0.1.0" }
rbuilder-lang-lua = { path = "crates/rbuilder-lang-lua", version = "0.1.0" }
rbuilder-lang-markdown = { path = "crates/rbuilder-lang-markdown", version = "0.1.0" }
rbuilder-lang-nim = { path = "crates/rbuilder-lang-nim", version = "0.1.0" }
rbuilder-lang-ocaml = { path = "crates/rbuilder-lang-ocaml", version = "0.1.0" }
rbuilder-lang-pascal = { path = "crates/rbuilder-lang-pascal", version = "0.1.0" }
rbuilder-lang-perl = { path = "crates/rbuilder-lang-perl", version = "0.1.0" }
rbuilder-lang-php = { path = "crates/rbuilder-lang-php", version = "0.1.0" }
rbuilder-lang-puppet = { path = "crates/rbuilder-lang-puppet", version = "0.1.0" }
rbuilder-lang-python = { path = "crates/rbuilder-lang-python", version = "0.1.0" }
rbuilder-lang-r = { path = "crates/rbuilder-lang-r", version = "0.1.0" }
rbuilder-lang-ruby = { path = "crates/rbuilder-lang-ruby", version = "0.1.0" }
rbuilder-lang-rust = { path = "crates/rbuilder-lang-rust", version = "0.1.0" }
rbuilder-lang-scala = { path = "crates/rbuilder-lang-scala", version = "0.1.0" }
rbuilder-lang-scheme = { path = "crates/rbuilder-lang-scheme", version = "0.1.0" }
rbuilder-lang-sql = { path = "crates/rbuilder-lang-sql", version = "0.1.0" }
rbuilder-lang-swift = { path = "crates/rbuilder-lang-swift", version = "0.1.0" }
rbuilder-lang-typescript = { path = "crates/rbuilder-lang-typescript", version = "0.1.0" }
rbuilder-lang-verilog = { path = "crates/rbuilder-lang-verilog", version = "0.1.0" }
rbuilder-lang-vhdl = { path = "crates/rbuilder-lang-vhdl", version = "0.1.0" }
rbuilder-lang-zig = { path = "crates/rbuilder-lang-zig", version = "0.1.0" }
rbuilder-bundle-extended = { path = "crates/rbuilder-bundle-extended", version = "0.1.0" }
rbuilder-bundle-extra = { path = "crates/rbuilder-bundle-extra", version = "0.1.0" }
rbuilder-bundle-full = { path = "crates/rbuilder-bundle-full", version = "0.1.0" }
rbuilder-bundle-minimal = { path = "crates/rbuilder-bundle-minimal", version = "0.1.0" }
tree-sitter = "0.25"

[package]
name = "rbuilder"
version = "0.1.0"
edition = "2021"
authors = ["rBuilder Contributors"]
description = "A Code knowledge graph system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sshaaf/rbuilder"
readme = "README.md"
keywords = ["code-analysis", "graph", "ai", "knowledge-graph"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Workspace crates
rbuilder-core = { workspace = true }
rbuilder-plugin-api = { workspace = true }
rbuilder-plugin-helpers = { workspace = true }
rbuilder-config-formats = { workspace = true }
rbuilder-lang-runtime = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-error = { workspace = true }
rbuilder-graph = { workspace = true }
rbuilder-extraction = { workspace = true }
rbuilder-pipeline = { workspace = true }
rbuilder-analysis = { workspace = true }
rbuilder-gql = { workspace = true }
rbuilder-export = { workspace = true }
rbuilder-nlp = { workspace = true }
rbuilder-security = { workspace = true }
rbuilder-project-config = { workspace = true }
rbuilder-incremental = { workspace = true }
rbuilder-semantic = { workspace = true }
rbuilder-rules = { workspace = true }
rbuilder-cli = { workspace = true }

rbuilder-bundle-minimal = { workspace = true, optional = true }
rbuilder-bundle-extended = { workspace = true, optional = true }
rbuilder-bundle-full = { workspace = true, optional = true }
rbuilder-bundle-extra = { workspace = true, optional = true }
rbuilder-lang-ansible = { workspace = true, optional = true }
rbuilder-lang-chef = { workspace = true, optional = true }
rbuilder-lang-puppet = { workspace = true, optional = true }

rbuilder-macros = { path = "rbuilder-macros", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
quick-xml = "0.31"
indradb-lib = "4.0"
petgraph = "0.6"
pathfinding = "4.0"
rayon = "1.7"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
regex = "1"
aho-corasick = "1"
fancy-regex = "0.11"
unicode-normalization = "0.1"
strsim = "0.11"
ndarray = { version = "0.15", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
indicatif = "0.17"
console = "0.15"
handlebars = "4"
blake3 = "1"
xxhash-rust = "0.8"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
pulldown-cmark = "0.9"
notify = "6.1"
bincode = "1.3"
ignore = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
pretty_assertions = "1"
insta = "1"
rbuilder-lang-ansible = { workspace = true }
rbuilder-lang-chef = { workspace = true }
rbuilder-lang-puppet = { workspace = true }


[features]
default = ["bundle-full", "nlp-patterns"]

all-languages = ["bundle-extra"]

bundle-minimal = ["dep:rbuilder-bundle-minimal"]
bundle-extended = ["dep:rbuilder-bundle-extended", "iac-langs"]
bundle-full = ["dep:rbuilder-bundle-full", "iac-langs"]
bundle-extra = ["dep:rbuilder-bundle-extra", "iac-langs"]
iac-langs = ["dep:rbuilder-lang-ansible", "dep:rbuilder-lang-chef", "dep:rbuilder-lang-puppet"]

nlp-patterns = ["rbuilder-nlp/nlp-patterns"]
nlp-cache = ["nlp-patterns", "ndarray", "rbuilder-nlp/nlp-cache"]
nlp-llm = ["nlp-cache", "reqwest", "rbuilder-nlp/nlp-llm"]

proc-macros = ["rbuilder-macros"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[[bin]]
name = "rbuilder"
path = "src/main.rs"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "phase11_polyglot"
harness = false
required-features = ["bundle-extended"]

[[bench]]
name = "nlp"
harness = false

[[bench]]
name = "phase13_analysis"
harness = false
required-features = ["bundle-minimal"]
