[workspace]
members = [
    ".",
    "rbuilder-macros",
    "crates/rbuilder-plugin-api",
    "crates/rbuilder-plugin-helpers",
    "crates/rbuilder-config-formats",
    "crates/rbuilder-lang-runtime",
    "crates/rbuilder-registry",
    "crates/rbuilder-error",
    "crates/rbuilder-graph",
    "crates/rbuilder-extraction",
    "crates/rbuilder-pipeline",
    "crates/rbuilder-analysis",
    "crates/rbuilder-gql",
    "crates/rbuilder-export",
    "crates/rbuilder-dashboard",
    "crates/rbuilder-wasm",
    "crates/rbuilder-security",
    "crates/rbuilder-project-config",
    "crates/rbuilder-incremental",
    "crates/rbuilder-semantic",
    "crates/rbuilder-rules",
    "crates/rbuilder-core",
    "crates/rbuilder-lang-go",
    "crates/rbuilder-lang-java",
    "crates/rbuilder-lang-javascript",
    "crates/rbuilder-lang-python",
    "crates/rbuilder-lang-rust",
    "crates/rbuilder-lang-typescript",
    "crates/rbuilder-lang-csharp",
    "crates/rbuilder-lang-c",
    "crates/rbuilder-lang-cpp",
    "crates/rbuilder-languages",
]
resolver = "2"

[workspace.dependencies]
rbuilder-plugin-api = { path = "crates/rbuilder-plugin-api", version = "0.1.0" }
rbuilder-plugin-helpers = { path = "crates/rbuilder-plugin-helpers", version = "0.1.0" }
rbuilder-config-formats = { path = "crates/rbuilder-config-formats", version = "0.1.0" }
rbuilder-lang-runtime = { path = "crates/rbuilder-lang-runtime", version = "0.1.0" }
rbuilder-registry = { path = "crates/rbuilder-registry", version = "0.1.0" }
rbuilder-error = { path = "crates/rbuilder-error", version = "0.1.0" }
rbuilder-graph = { path = "crates/rbuilder-graph", version = "0.1.0" }
rbuilder-extraction = { path = "crates/rbuilder-extraction", version = "0.1.0" }
rbuilder-pipeline = { path = "crates/rbuilder-pipeline", version = "0.1.0" }
rbuilder-analysis = { path = "crates/rbuilder-analysis", version = "0.1.0" }
rbuilder-gql = { path = "crates/rbuilder-gql", version = "0.1.0" }
rbuilder-export = { path = "crates/rbuilder-export", version = "0.1.0" }
rbuilder-dashboard = { path = "crates/rbuilder-dashboard", version = "0.1.0" }
rbuilder-wasm = { path = "crates/rbuilder-wasm", version = "0.1.0" }
rbuilder-security = { path = "crates/rbuilder-security", version = "0.1.0" }
rbuilder-project-config = { path = "crates/rbuilder-project-config", version = "0.1.0" }
rbuilder-incremental = { path = "crates/rbuilder-incremental", version = "0.1.0" }
rbuilder-semantic = { path = "crates/rbuilder-semantic", version = "0.1.0" }
rbuilder-rules = { path = "crates/rbuilder-rules", version = "0.1.0" }
rbuilder-core = { path = "crates/rbuilder-core", version = "0.1.0" }
tempfile = "3"
zstd = "0.13"
rbuilder-lang-go = { path = "crates/rbuilder-lang-go", version = "0.1.0" }
rbuilder-lang-java = { path = "crates/rbuilder-lang-java", version = "0.1.0" }
rbuilder-lang-javascript = { path = "crates/rbuilder-lang-javascript", version = "0.1.0" }
rbuilder-lang-python = { path = "crates/rbuilder-lang-python", version = "0.1.0" }
rbuilder-lang-rust = { path = "crates/rbuilder-lang-rust", version = "0.1.0" }
rbuilder-lang-typescript = { path = "crates/rbuilder-lang-typescript", version = "0.1.0" }
rbuilder-lang-csharp = { path = "crates/rbuilder-lang-csharp", version = "0.1.0" }
rbuilder-lang-c = { path = "crates/rbuilder-lang-c", version = "0.1.0" }
rbuilder-lang-cpp = { path = "crates/rbuilder-lang-cpp", version = "0.1.0" }
rbuilder-languages = { path = "crates/rbuilder-languages", version = "0.1.0" }
tree-sitter = "0.25"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
unexpected_cfgs = "warn"

[workspace.lints.clippy]
# Correctness lints (deny - these are likely bugs)
correctness = { level = "deny", priority = -1 }

# Suspicious patterns (warn - likely bugs)
suspicious = { level = "warn", priority = -1 }

# Style and complexity (warn - code quality)
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }

# Performance (warn - potential optimizations)
perf = { level = "warn", priority = -1 }

# Specific important lints
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
unwrap_used = "warn"
expect_used = "warn"

[package]
name = "rbuilder"
version = "0.0.4"
edition = "2021"
authors = ["rBuilder Contributors"]
description = "A Code knowledge graph system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sshaaf/rbuilder"
readme = "README.md"
keywords = ["code-analysis", "graph", "ai", "knowledge-graph"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Workspace crates
rbuilder-core = { workspace = true }
rbuilder-plugin-api = { workspace = true }
rbuilder-plugin-helpers = { workspace = true }
rbuilder-config-formats = { workspace = true }
rbuilder-lang-runtime = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-error = { workspace = true }
rbuilder-graph = { workspace = true }
rbuilder-extraction = { workspace = true }
rbuilder-pipeline = { workspace = true }
rbuilder-analysis = { workspace = true }
rbuilder-gql = { workspace = true }
rbuilder-export = { workspace = true }
rbuilder-dashboard = { workspace = true }
rbuilder-security = { workspace = true }
rbuilder-project-config = { workspace = true }
rbuilder-incremental = { workspace = true }
rbuilder-semantic = { workspace = true }
rbuilder-rules = { workspace = true }
rbuilder-languages = { workspace = true }

rbuilder-macros = { path = "rbuilder-macros", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
quick-xml = "0.31"
indradb-lib = "4.0"
petgraph = "0.6"
pathfinding = "4.0"
rayon = "1.7"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
regex = "1"
aho-corasick = "1"
fancy-regex = "0.11"
unicode-normalization = "0.1"
strsim = "0.11"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
indicatif = "0.17"
console = "0.15"
handlebars = "4"
blake3 = "1"
xxhash-rust = "0.8"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
pulldown-cmark = "0.9"
bincode = "1.3"
ignore = "0.4"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
pretty_assertions = "1"
insta = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rbuilder-dashboard = { workspace = true }
rbuilder-lang-go = { workspace = true }
rbuilder-lang-csharp = { workspace = true }
rbuilder-lang-c = { workspace = true }
rbuilder-lang-cpp = { workspace = true }
rbuilder-lang-javascript = { workspace = true }
rbuilder-lang-typescript = { workspace = true }
rbuilder-lang-rust = { workspace = true }

[features]
default = []

proc-macros = ["rbuilder-macros"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = false
strip = false

[[bin]]
name = "rbuilder"
path = "src/main.rs"

[[test]]
name = "cli_output"
path = "tests/cli_output/main.rs"

[[test]]
name = "subprocess_golden_path"
path = "tests/cli_output/subprocess_golden_path.rs"

[[test]]
name = "all_commands_sanity"
path = "tests/cli_output/all_commands_sanity.rs"

[[test]]
name = "http_serve"
path = "tests/http_serve.rs"

[[test]]
name = "dashboard_bundle"
path = "tests/dashboard_bundle.rs"

[[test]]
name = "dashboard_gbuilder"
path = "tests/dashboard_gbuilder.rs"

[[test]]
name = "dashboard_ecommerce_go"
path = "tests/dashboard_ecommerce_go.rs"

[[test]]
name = "dashboard_ecommerce_csharp"
path = "tests/dashboard_ecommerce_csharp.rs"

[[test]]
name = "dashboard_ecommerce_c"
path = "tests/dashboard_ecommerce_c.rs"

[[test]]
name = "c_cfg_analysis"
path = "tests/c_cfg_analysis.rs"

[[test]]
name = "c_phase13"
path = "tests/c_phase13.rs"

[[test]]
name = "dashboard_ecommerce_cpp"
path = "tests/dashboard_ecommerce_cpp.rs"

[[test]]
name = "dashboard_ecommerce_python"
path = "tests/dashboard_ecommerce_python.rs"

[[test]]
name = "dashboard_ecommerce_rust"
path = "tests/dashboard_ecommerce_rust.rs"

[[test]]
name = "dashboard_ecommerce_javascript"
path = "tests/dashboard_ecommerce_javascript.rs"

[[test]]
name = "dashboard_ecommerce_typescript"
path = "tests/dashboard_ecommerce_typescript.rs"

[[test]]
name = "js_phase13"
path = "tests/js_phase13.rs"

[[test]]
name = "rust_phase13"
path = "tests/rust_phase13.rs"

[[test]]
name = "javascript_cfg_analysis"
path = "tests/javascript_cfg_analysis.rs"

[[test]]
name = "cpp_cfg_analysis"
path = "tests/cpp_cfg_analysis.rs"

[[test]]
name = "cpp_phase13"
path = "tests/cpp_phase13.rs"

[[test]]
name = "go_cfg_analysis"
path = "tests/go_cfg_analysis.rs"

[[test]]
name = "dashboard_metasfresh"
path = "tests/dashboard_metasfresh.rs"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "graph_benchmarks"
harness = false

[[bench]]
name = "phase13_analysis"
harness = false

[[bench]]
name = "centrality_benchmarks"
harness = false

[[bench]]
name = "community_benchmarks"
harness = false

[[bench]]
name = "blast_radius_benchmarks"
harness = false
