[package]
name = "rbuilder-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for rBuilder language plugins"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
rbuilder-plugin-api = { path = "../crates/rbuilder-plugin-api" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
