[package]
name = "rbuilder-analysis"
version = "0.1.0"
edition = "2021"
description = "Graph analysis algorithms for rBuilder"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-error = { path = "../rbuilder-error" }
rbuilder-graph = { path = "../rbuilder-graph" }
rbuilder-plugin-api = { path = "../rbuilder-plugin-api" }
rbuilder-plugin-helpers = { path = "../rbuilder-plugin-helpers" }
petgraph = "0.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c-sharp = "0.23.5"
uuid = { version = "1", features = ["v4", "serde"] }
bit-set = "0.8"
tracing = "0.1"
bincode = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = { workspace = true }
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"
