[package]
name = "rbuilder-analysis"
version = "0.2.0"
edition = "2021"
description = "Graph analysis algorithms for rBuilder"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-error = { path = "../rbuilder-error" }
rbuilder-graph = { path = "../rbuilder-graph" }
rbuilder-plugin-api = { path = "../rbuilder-plugin-api" }
rbuilder-plugin-helpers = { path = "../rbuilder-plugin-helpers" }
petgraph = "0.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23.4"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
uuid = { version = "1", features = ["v4", "serde"] }
bit-set = "0.8"
tracing = "0.1"
bincode = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = { workspace = true }
memmap2 = "0.9"
rayon = { workspace = true }

[features]
default = []
semantic-onnx = ["dep:ort", "dep:ndarray", "dep:sentencepiece-rs"]

[dependencies.ort]
version = "2.0.0-rc.12"
optional = true
default-features = false
features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-rustls"]

[dependencies.ndarray]
version = "0.17"
optional = true
features = ["std"]

[dependencies.sentencepiece-rs]
version = "0.2"
optional = true

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
