[package]
name = "rbuilder-bundle-extra"
version = "0.1.0"
edition = "2021"
description = "rBuilder language bundle: extra"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-registry = { workspace = true }
rbuilder-config-formats = { workspace = true }
rbuilder-lang-rust = { workspace = true }
rbuilder-lang-python = { workspace = true }
rbuilder-lang-javascript = { workspace = true }
rbuilder-lang-typescript = { workspace = true }
rbuilder-lang-go = { workspace = true }
rbuilder-lang-java = { workspace = true }
rbuilder-lang-kotlin = { workspace = true }
rbuilder-lang-csharp = { workspace = true }
rbuilder-lang-markdown = { workspace = true }
rbuilder-lang-c = { workspace = true }
rbuilder-lang-cpp = { workspace = true }
rbuilder-lang-ruby = { workspace = true }
rbuilder-lang-php = { workspace = true }
rbuilder-lang-sql = { workspace = true }
rbuilder-lang-bash = { workspace = true }
rbuilder-lang-dockerfile = { workspace = true }
rbuilder-lang-github-actions = { workspace = true }
rbuilder-lang-gitlab-ci = { workspace = true }
rbuilder-lang-ansible = { workspace = true }
rbuilder-lang-chef = { workspace = true }
rbuilder-lang-puppet = { workspace = true }
rbuilder-lang-swift = { workspace = true }
rbuilder-lang-scala = { workspace = true }
rbuilder-lang-elixir = { workspace = true }
rbuilder-lang-erlang = { workspace = true }
rbuilder-lang-dart = { workspace = true }
rbuilder-lang-lua = { workspace = true }
rbuilder-lang-haskell = { workspace = true }
rbuilder-lang-julia = { workspace = true }
rbuilder-lang-r = { workspace = true }
rbuilder-lang-nim = { workspace = true }
rbuilder-lang-ocaml = { workspace = true }
rbuilder-lang-perl = { workspace = true }
rbuilder-lang-fortran = { workspace = true }
rbuilder-lang-verilog = { workspace = true }
rbuilder-lang-vhdl = { workspace = true }
rbuilder-lang-cobol = { workspace = true }
rbuilder-lang-pascal = { workspace = true }
rbuilder-lang-scheme = { workspace = true }
rbuilder-lang-zig = { workspace = true }
rbuilder-lang-fsharp = { workspace = true }
rbuilder-lang-crystal = { workspace = true }
rbuilder-lang-clojure = { workspace = true }
rbuilder-lang-assembly = { workspace = true }
