[package]
name = "rbuilder-bundle-minimal"
version = "0.1.0"
edition = "2021"
description = "rBuilder language bundle: minimal"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-registry = { workspace = true }
rbuilder-config-formats = { workspace = true }
rbuilder-lang-rust = { workspace = true }
rbuilder-lang-python = { workspace = true }
rbuilder-lang-javascript = { workspace = true }
rbuilder-lang-typescript = { workspace = true }
rbuilder-lang-go = { workspace = true }
