[package]
name = "rbuilder-config-formats"
version = "0.3.0"
edition = "2021"
description = "Configuration format plugins for rBuilder"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { path = "../rbuilder-plugin-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
pulldown-cmark = "0.9"
tree-sitter = "0.25"
