[package]
name = "rbuilder-core"
version = "0.1.0"
edition = "2021"
description = "Facade crate for rBuilder library consumers"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-analysis = { path = "../rbuilder-analysis" }
rbuilder-error = { path = "../rbuilder-error" }
rbuilder-export = { path = "../rbuilder-export" }
rbuilder-extraction = { path = "../rbuilder-extraction" }
rbuilder-gql = { path = "../rbuilder-gql" }
rbuilder-graph = { path = "../rbuilder-graph" }
rbuilder-incremental = { path = "../rbuilder-incremental" }
rbuilder-pipeline = { path = "../rbuilder-pipeline" }
rbuilder-plugin-api = { path = "../rbuilder-plugin-api" }
rbuilder-project-config = { path = "../rbuilder-project-config" }
rbuilder-registry = { path = "../rbuilder-registry" }
rbuilder-rules = { path = "../rbuilder-rules" }
rbuilder-security = { path = "../rbuilder-security" }
rbuilder-semantic = { path = "../rbuilder-semantic" }

sysinfo = "0.30"

[features]
default = []
