[package]
name = "rbuilder-dashboard"
version = "0.1.0"
edition = "2021"
description = "Static dashboard bundle export for rBuilder"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-analysis = { path = "../rbuilder-analysis" }
rbuilder-graph = { path = "../rbuilder-graph" }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rayon = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
