[package]
name = "rbuilder-export"
version = "0.4.2"
edition = "2021"
description = "Graph export and visualization for rBuilder"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-error = { path = "../rbuilder-error" }
rbuilder-graph = { path = "../rbuilder-graph" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
